--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==2.9.5
 MarkupSafe==1.1.1
 packaging==16.8
 prettyprinter==0.18.0
+psycopg2==2.9.1
 Pygments==2.7.4
 pyparsing==2.2.0
 python-env==1.0.0
